[gd_scene load_steps=3 format=3 uid="uid://ser6du4tr2cu"]

[ext_resource type="Script" path="res://UI/pause.gd" id="1_ag0r8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xouvt"]
bg_color = Color(0, 0, 0, 0.65098)

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag0r8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xouvt")

[node name="MenuTitle" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 33.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuTitle"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PauseText" type="Label" parent="MenuTitle/MarginContainer"]
layout_mode = 2
text = "Paused
"

[node name="Buttons" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -56.5
offset_right = 70.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResumeButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitWindowsButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/QuitWindowsButton" to="." method="_on_quit_windows_button_pressed"]
